@@ -784,15 +784,18 @@ case "$target" in
     AC_DEFINE(DECL_BZERO_0)
     AC_DEFINE(DECL_IOCTL_0)
     AC_DEFINE(DECL_IPC_0)
+    AC_DEFINE(DECL_MEMMOVE_0)
     AC_DEFINE(DECL_MKTEMP_0)
+    AC_DEFINE(DECL_MKSTEMP_0)
+    AC_DEFINE(DECL_MRAND48_0)
     AC_DEFINE(DECL_RENAME_0)
     AC_DEFINE(DECL_SELECT_0)
     AC_DEFINE(DECL_SETITIMER_0)
     AC_DEFINE(DECL_SETPRIORITY_0)
     AC_DEFINE(DECL_SIGVEC_0)
+    AC_DEFINE(DECL_SRAND48_0)
     case "`basename $ac_cv_prog_CC`" in
      acc*) ;;
-     gcc*) ;;
      *) AC_DEFINE(DECL_STDIO_0)
 	;;
     esac
@@ -801,6 +804,7 @@ case "$target" in
     AC_DEFINE(DECL_TIME_0)
     AC_DEFINE(DECL_TIMEOFDAY_0)
     AC_DEFINE(DECL_TOLOWER_0)
+    AC_DEFINE(DECL_TOUPPER_0)
     ;;
  *-*-ultrix4*)
     AC_DEFINE(DECL_ADJTIME_0)
